--- a/debug/visualize.ipynb
+++ b/debug/visualize.ipynb
@@ -11052,10 +11052,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   "hash": "d704fd724be6d153083b5208311e2373b081d2d9c31a4aa77d8e955ba0eacb3e"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.10.4 ('venv')",
    "language": "python",
    "name": "python3"
   },
